k8s/testudo/base/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fleet
  labels:
    app.kubernetes.io/name: fleet
    app.kubernetes.io/part-of: fleet
  annotations:
    kubernetes.io/ingress.class: gce
spec:
  defaultBackend:
    service:
      name: fleet
      port:
        number: 80
  rules:
    - host: mdm.testudosrl.dev
      http:
        paths:
          - path: /*
            pathType: ImplementationSpecific
            backend:
              service:
                name: fleet
                port:
                  number: 80
